[package]
name = "rshot"
version = "0.1.0"
authors = ["Jaime Liz <lizjaime@gmail.com"]
license = "MIT"
description = "A command line tool to genearte screenshots from a given URL"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
failure = "0.1.8"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
